--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --port 3333",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -15,19 +15,30 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/types": "^2.17.0",
+    "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/i18n": "8.0.0-beta.12",
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia/nuxt": "^0.4.11",
+    "@types/debug": "^4.1.8",
+    "@types/dompurify": "^3.0.2",
+    "@types/marked": "^5.0.0",
     "@types/node": "^18",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.5.2",
+    "nuxt-icon": "^0.4.1",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
@@ -36,7 +47,14 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.11",
-    "pinia": "^2.1.3"
+    "@nuxtjs/robots": "^3.0.0",
+    "axios": "^1.4.0",
+    "debug": "^4.3.4",
+    "dompurify": "^3.0.3",
+    "marked": "^5.1.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.3",
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "vuejs-title": "^1.0.16"
   }
 }
