--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:typecheck": "nuxt typecheck"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.6.0",
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.0",
     "@nuxt/typescript-build": "^3.0.1",
@@ -47,14 +48,15 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.14",
     "@nuxtjs/robots": "^3.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
     "dompurify": "^3.0.3",
     "marked": "^5.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
-    "pinia-plugin-persistedstate": "^3.1.0",
-    "vuejs-title": "^1.0.16"
+    "pinia-plugin-persistedstate": "^3.1.0"
   }
 }
