--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "@vueuse/core": "^10.1.2",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
@@ -57,6 +58,7 @@
     "marked": "^5.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
-    "pinia-plugin-persistedstate": "^3.1.0"
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "remark-heading-id": "^1.0.0"
   }
 }
