--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/debug": "^4.1.8",
     "@types/dompurify": "^3.0.2",
     "@types/marked": "^5.0.0",
@@ -39,8 +40,9 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.14.1",
-    "nuxt": "^3.5.2",
+    "nuxt": "^3.5.3",
     "nuxt-icon": "^0.4.1",
+    "nuxt-lodash": "^2.4.1",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
@@ -49,16 +51,19 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.1.3",
     "@headlessui/vue": "^1.7.14",
     "@nuxtjs/robots": "^3.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
     "dompurify": "^3.0.3",
+    "lodash": "^4.17.21",
     "marked": "^5.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "qs": "^6.11.2",
     "remark-heading-id": "^1.0.0"
   }
 }
