--- a/package.json
+++ b/package.json
@@ -14,40 +14,40 @@
     "lint:typecheck": "nuxt typecheck"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.6.0",
+    "@nuxt/content": "^2.7.0",
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.0",
     "@nuxt/typescript-build": "^3.0.1",
-    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "8.0.0-beta.12",
-    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
     "@types/debug": "^4.1.8",
     "@types/dompurify": "^3.0.2",
     "@types/marked": "^5.0.0",
-    "@types/node": "^18",
+    "@types/node": "^20.3.1",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vueuse/core": "^10.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "@vueuse/core": "^10.2.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint-plugin-vue": "^9.15.1",
     "nuxt": "^3.6.0",
     "nuxt-icon": "^0.4.1",
-    "nuxt-lodash": "^2.4.1",
+    "nuxt-lodash": "^2.5.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "sass": "^1.63.2",
-    "sass-loader": "^13.3.1",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.1.3",
@@ -59,9 +59,17 @@
     "dompurify": "^3.0.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.3",
+    "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.2",
-    "remark-heading-id": "^1.0.0"
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.3",
+    "remark-emoji": "^3.1.2",
+    "remark-gfm": "^3.0.1",
+    "remark-heading-id": "^1.0.0",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0"
   }
 }
