--- a/package.json
+++ b/package.json
@@ -59,14 +59,12 @@
     "dompurify": "^3.0.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.4",
-    "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.2",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
-    "remark-emoji": "^3.1.2",
+    "remark-gemoji": "^7.0.1",
     "remark-gfm": "^3.0.1",
     "remark-heading-id": "^1.0.0",
     "remark-parse": "^10.0.2",
