--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.15.1",
-    "guizhan-builds-2-data": "^0.1.0",
-    "nuxt": "^3.6.0",
+    "nuxt": "^3.6.1",
     "nuxt-icon": "^0.4.1",
     "nuxt-lodash": "^2.5.0",
     "postcss": "^8.4.24",
@@ -57,7 +56,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "debug": "^4.3.4",
-    "dompurify": "^3.0.3",
+    "guizhan-builds-2-data": "^0.2.0",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "qs": "^6.11.2",
@@ -70,6 +69,7 @@
     "remark-github": "^11.2.4",
     "remark-heading-id": "^1.0.0",
     "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0"
+    "remark-rehype": "^10.1.0",
+    "vue-tippy": "^6.2.0"
   }
 }
