--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "guizhan-builds-2-data": "^0.2.0",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "pinia": "^2.1.4",
     "qs": "^6.11.2",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
