--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nuxtjs/robots": "^3.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "debug": "^4.3.4",
     "guizhan-builds-2-data": "^0.2.0",
     "lodash": "^4.17.21",
