refactor(format): use new rule set

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,8 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "none"
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": false,
+  "printWidth": 160,
+  "arrowParens": "always",
+  "trailingComma": "es5"
 }
