--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.7.0",
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^0.6.7",
     "@nuxt/types": "^2.17.0",
     "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
@@ -33,10 +32,14 @@
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vueuse/core": "^10.2.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.15.1",
