--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "remark-heading-id": "^1.0.0",
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
+    "unist-util-map": "^4.0.0",
     "vue-tippy": "^6.2.0"
   }
 }
