--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "qs": "^6.11.2",
+    "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
