--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@pinia/nuxt": "^0.4.11",
+    "@types/crypto-js": "^4.1.1",
     "@types/debug": "^4.1.8",
     "@types/dompurify": "^3.0.2",
     "@types/marked": "^5.0.0",
@@ -59,6 +60,7 @@
     "@nuxtjs/robots": "^3.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
     "debug": "^4.3.4",
     "guizhan-builds-2-data": "^0.2.0",
