--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setting up node
         uses: actions/setup-node@v3
         with:
-          node-version: '18.12.0'
+          node-version: "18.12.0"
 
       - name: Setting up pnpm
         uses: pnpm/action-setup@v2
