--- a/.github/workflows/repos.yml
+++ b/.github/workflows/repos.yml
@@ -12,16 +12,25 @@ jobs:
   copy:
     runs-on: ubuntu-latest
 
+    env:
+      BOT_NAME: ${{ secrets.BOT_NAME }}
+      BOT_EMAIL: ${{ secrets.BOT_EMAIL }}
+
+    permissions:
+      contents: write
+
     steps:
       - name: Checking out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Copy repos.json
         run: |
           cp "$GITHUB_WORKSPACE/public/repos.json" "$GITHUB_WORKSPACE/content/repos.json"
 
       - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore(repos): copy to content folder"
-          default_author: github_actions
+        run: |
+          git config --local user.name "$BOT_NAME"
+          git config --local user.email "$BOT_EMAIL"
+          git add .
+          git commit -m "chore(repos): copy repos.json to content folder"
+          git push
