--- a/.github/workflows/copy-repos.yml
+++ b/.github/workflows/copy-repos.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           git config --local user.name "$BOT_NAME"
           git config --local user.email "$BOT_EMAIL"
+          git pull
           git add .
           git commit -m "chore(repos): copy repos.json to content folder"
           git push
