--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prep": "nuxt prepare",
     "lint:eslint": "eslint --ext \".js,.vue,.ts,.html\" --ignore-path .gitignore --fix .",
     "lint:prettier": "prettier -w .",
-    "lint:typecheck": "nuxt typecheck"
+    "lint:typecheck": "nuxt typecheck",
+    "test": "vitest"
   },
   "devDependencies": {
     "@nuxt/content": "^2.7.0",
     "@nuxt/devtools": "^0.8.0",
+    "@nuxt/test-utils": "^3.7.0",
     "@nuxt/types": "^2.17.0",
     "@nuxt/typescript-build": "^3.0.1",
     "@nuxtjs/color-mode": "^3.3.0",
@@ -44,6 +46,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.15.1",
+    "jsdom": "^22.1.0",
     "nuxt": "^3.6.5",
     "nuxt-icon": "^0.5.0",
     "nuxt-lodash": "^2.5.0",
@@ -52,7 +55,8 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vitest": "^0.34.3"
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
