--- a/package.json
+++ b/package.json
@@ -45,15 +45,18 @@
 		"eslint-plugin-nuxt": "^4.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-vue": "^9.15.1",
+		"happy-dom": "^10.11.0",
 		"nuxt": "^3.6.5",
 		"nuxt-icon": "^0.5.0",
 		"nuxt-lodash": "^2.5.0",
+		"nuxt-vitest": "^0.10.2",
 		"postcss": "^8.4.24",
 		"prettier": "^3.0.0",
 		"sass": "^1.63.6",
 		"sass-loader": "^13.3.2",
 		"tailwindcss": "^3.3.2",
-		"typescript": "^5.1.3"
+		"typescript": "^5.1.3",
+		"vitest": "^0.33.0"
 	},
 	"dependencies": {
 		"@headlessui/tailwindcss": "^0.2.0",
