--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"name": "guizhan-builds-2-frontend",
-	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"build": "nuxt build",
@@ -10,9 +9,8 @@
 		"postinstall": "nuxt prepare",
 		"previewBuild": "nuxt build && nuxt preview",
 		"prep": "nuxt prepare",
-		"lint:eslint": "eslint --ext \".js,.vue,.ts,.html\" --ignore-path .gitignore --fix .",
-		"lint:prettier": "prettier -w .",
-		"lint:typecheck": "nuxt typecheck",
+		"lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+		"prettier": "prettier --write --ignore-path .gitignore .",
 		"test": "vitest"
 	},
 	"devDependencies": {
@@ -22,6 +20,7 @@
 		"@nuxt/typescript-build": "^3.0.1",
 		"@nuxtjs/color-mode": "^3.3.0",
 		"@nuxtjs/eslint-config-typescript": "^12.0.0",
+		"@nuxtjs/eslint-module": "^4.1.0",
 		"@nuxtjs/i18n": "8.0.0-rc.4",
 		"@nuxtjs/tailwindcss": "^6.8.0",
 		"@pinia-plugin-persistedstate/nuxt": "^1.1.1",
@@ -34,17 +33,10 @@
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
-		"@vue/eslint-config-typescript": "^11.0.3",
 		"@vueuse/core": "^10.2.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-alias": "^1.1.2",
-		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-nuxt": "^4.0.0",
-		"eslint-plugin-prettier": "^5.0.0",
-		"eslint-plugin-vue": "^9.15.1",
 		"happy-dom": "^11.0.0",
 		"nuxt": "^3.7.2",
 		"nuxt-icon": "^0.5.0",
