--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nuxtjs/color-mode": "^3.3.0",
 		"@nuxtjs/eslint-config-typescript": "^12.0.0",
 		"@nuxtjs/eslint-module": "^4.1.0",
+		"@nuxtjs/google-fonts": "^3.0.2",
 		"@nuxtjs/i18n": "8.0.0-rc.4",
 		"@nuxtjs/tailwindcss": "^6.8.0",
 		"@pinia-plugin-persistedstate/nuxt": "^1.1.1",
