--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vueuse/core": "^10.2.0",
 		"autoprefixer": "^10.4.14",
+		"dayjs-nuxt": "^1.2.2",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^9.0.0",
 		"happy-dom": "^11.0.6",
@@ -58,7 +59,7 @@
 		"animate.css": "^4.1.1",
 		"axios": "^1.4.0",
 		"crypto-js": "^4.1.1",
-		"dayjs": "^1.11.9",
+		"dayjs": "^1.11.10",
 		"debug": "^4.3.4",
 		"guizhan-builds-2-data": "^0.5.0",
 		"lodash": "^4.17.21",
