--- a/.github/workflows/fetch-mc-versions.yml
+++ b/.github/workflows/fetch-mc-versions.yml
@@ -23,7 +23,14 @@ jobs:
       - name: Fetch Minecraft versions
         id: fetch-versions
         run: |
-          fetched_versions=$(curl -s https://api.guizhanss.net/minecraft-versions)
+          fetched_versions=$(curl -s --fail https://api.guizhanss.net/minecraft-versions)
+          exit_code=$?
+          
+          if [ $exit_code -ne 0 ]; then
+            echo "无法获取 Minecraft 版本，curl返回：$exit_code"
+            exit 1
+          fi
+          
           existing_versions=$(cat content/mc-versions.json || echo "[]")
           
           if [ "$fetched_versions" != "$existing_versions" ]; then
