--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
 	"tabWidth": 2,
 	"semi": true,
-	"singleQuote": false,
+	"singleQuote": true,
 	"printWidth": 160,
 	"arrowParens": "always",
 	"trailingComma": "none"
