--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-config-prettier": "^9.0.0",
 		"happy-dom": "^11.0.6",
 		"nuxt": "3.8.1",
+		"nuxt-icon": "^0.5.0",
 		"nuxt-lodash": "^2.5.0",
 		"nuxt-vitest": "^0.11.0",
 		"postcss": "^8.4.24",
