--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"devDependencies": {
 		"@iconify/json": "^2.2.119",
 		"@nuxt/content": "^2.7.0",
-		"@nuxt/devtools": "^1.0.0",
+		"@nuxt/devtools": "^0.8.0",
 		"@nuxt/types": "^2.17.0",
 		"@nuxt/typescript-build": "^3.0.1",
 		"@nuxt/ui": "^2.8.1",
@@ -39,7 +39,7 @@
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^9.0.0",
 		"happy-dom": "^11.0.6",
-		"nuxt": "^3.7.3",
+		"nuxt": "3.7.4",
 		"nuxt-icon": "^0.5.0",
 		"nuxt-lodash": "^2.5.0",
 		"nuxt-vitest": "^0.11.0",
