--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"devDependencies": {
 		"@iconify/json": "^2.2.119",
 		"@nuxt/content": "^2.7.0",
-		"@nuxt/devtools": "^0.8.0",
+		"@nuxt/devtools": "^1.0.3",
 		"@nuxt/types": "^2.17.0",
 		"@nuxt/typescript-build": "^3.0.1",
 		"@nuxt/ui": "^2.8.1",
@@ -29,7 +29,7 @@
 		"@types/crypto-js": "^4.1.1",
 		"@types/debug": "^4.1.8",
 		"@types/dompurify": "^3.0.2",
-		"@types/marked": "^5.0.0",
+		"@types/marked": "^6.0.0",
 		"@types/node": "^20.3.1",
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -38,9 +38,9 @@
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^9.0.0",
-		"happy-dom": "^11.0.6",
-		"nuxt": "3.7.4",
-		"nuxt-icon": "^0.5.0",
+		"happy-dom": "^12.10.3",
+		"nuxt": "^3.8.2",
+		"nuxt-icon": "^0.6.6",
 		"nuxt-lodash": "^2.5.0",
 		"nuxt-vitest": "^0.11.0",
 		"postcss": "^8.4.24",
@@ -49,13 +49,12 @@
 		"sass-loader": "^13.3.2",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.1.3",
-		"vitest": "^0.33.0"
+		"vitest": "^0.34.6"
 	},
 	"dependencies": {
 		"@headlessui/tailwindcss": "^0.2.0",
 		"@headlessui/vue": "^1.7.14",
 		"@nuxtjs/robots": "^3.0.0",
-		"animate.css": "^4.1.1",
 		"axios": "^1.4.0",
 		"crypto-js": "^4.1.1",
 		"dayjs": "^1.11.9",
@@ -66,17 +65,17 @@
 		"nuxt-cloudflare-analytics": "^1.0.8",
 		"pinia": "^2.1.4",
 		"qs": "^6.11.2",
-		"rehype-highlight": "^6.0.0",
-		"rehype-raw": "^6.1.1",
-		"rehype-sanitize": "^5.0.1",
-		"rehype-stringify": "^9.0.3",
-		"remark": "^14.0.3",
-		"remark-gemoji": "^7.0.1",
-		"remark-gfm": "^3.0.1",
-		"remark-github": "^11.2.4",
+		"rehype-highlight": "^7.0.0",
+		"rehype-raw": "^7.0.0",
+		"rehype-sanitize": "^6.0.0",
+		"rehype-stringify": "^10.0.0",
+		"remark": "^15.0.1",
+		"remark-gemoji": "^8.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-github": "^12.0.0",
 		"remark-heading-id": "^1.0.0",
-		"remark-parse": "^10.0.2",
-		"remark-rehype": "^10.1.0",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.0.0",
 		"vue-tippy": "^6.2.0"
 	}
 }
