--- a/.github/ISSUE_TEMPLATE/apply.yml
+++ b/.github/ISSUE_TEMPLATE/apply.yml
@@ -11,10 +11,11 @@ body:
     attributes:
       value: |
         ## 欢迎提交接入构建站申请
+        本功能暂未实现自动化，所以请直接提交 PR。
         在提交申请之前，你需要知道：  
         - 构建站的项目为粘液科技以及附属。不过，你也可以提交非粘液相关的项目。
-        - 构建站支持Maven与Gradle项目。
-        - 本表单仅提供部分选项可供填写。如果你需要更多的选项，请直接提交PR。
+        - 构建站支持 Maven 与 Gradle 项目。
+        - 本表单仅提供部分选项可供填写。如果你需要更多的选项，请直接提交 PR。
 
         <strong><i>你必须填写标注为星号（*）的表单项</i></strong>
 
