--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -1,9 +1,11 @@
-name: Nuxt Build on Pull Request
+name: (Frontend) Nuxt Build on Pull Request
 
 on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'frontend/*'
 
 jobs:
   build:
@@ -15,8 +17,10 @@ jobs:
       NODE_OPTIONS: '--max-old-space-size=4096'
 
     steps:
-      - name: Checking out repository
-        uses: actions/checkout@v4
+      - name: Checkout files
+        uses: Bhacaz/checkout-files@v2
+        with:
+          files: frontend
 
       - name: Setting up node
         uses: actions/setup-node@v4
