--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -1,9 +1,11 @@
-name: Nuxt Build on Pull Request
+name: (Frontend) Nuxt Build on Pull Request
 
 on:
   pull_request:
     branches:
       - master
+    paths:
+      - 'frontend/**'
 
 jobs:
   build:
@@ -25,6 +27,9 @@ jobs:
 
       - name: Setting up bun
         uses: oven-sh/setup-bun@v1
+
+      - name: Switch to frontend directory
+        run: cd frontend
 
       - name: Installing dependencies
         run: bun install
