--- a/ci/package.json
+++ b/ci/package.json
@@ -17,6 +17,7 @@
     "guizhan-builds-2-data": "^0.6.0",
     "prettier": "3.1.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
