--- a/ci/tsconfig.json
+++ b/ci/tsconfig.json
@@ -12,5 +12,8 @@
     "strict": true,
     "skipLibCheck": true,
     "moduleResolution": "node"
-  }
+  },
+	"ts-node": {
+		"require": ["tsconfig-paths/register"]
+	}
 }
