--- a/.github/workflows/ci-auto-build.yml
+++ b/.github/workflows/ci-auto-build.yml
@@ -12,10 +12,10 @@ jobs:
 
     env:
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-      ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
-      ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
-      SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
-      BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+      R2_ACCOUNT_ID: ${{ secrets.R2_ACCOUNT_ID }}
+      R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+      R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+      R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
       WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
       WEBHOOK_KEY: ${{ secrets.WEBHOOK_KEY }}
 
