chore(ci): update workflow

--- a/.github/workflows/ci-auto-build.yml
+++ b/.github/workflows/ci-auto-build.yml
@@ -18,6 +18,7 @@ jobs:
       R2_BUCKET_NAME: ${{ secrets.R2_BUCKET_NAME }}
       WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
       WEBHOOK_KEY: ${{ secrets.WEBHOOK_KEY }}
+      NODE_ENV: production
 
     steps:
     - name: Checking out Repository
