--- a/.github/workflows/types-build.yml
+++ b/.github/workflows/types-build.yml
@@ -1,5 +1,10 @@
 name: (Types) Build
-on: [push]
+on:
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'types/**'
 jobs:
   build:
     name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
