ci: update actions

--- a/.github/workflows/types-size-limit.yml
+++ b/.github/workflows/types-size-limit.yml
@@ -33,4 +33,5 @@ jobs:
         uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          skip_step: install
           directory: types
