--- a/.github/workflows/ci-auto-build.yml
+++ b/.github/workflows/ci-auto-build.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Setting up Java
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
-        java-version: '17'
+        distribution: 'zulu'
+        java-version: '21'
 
     - name: Setting up node.js
       uses: actions/setup-node@v4
