--- a/ci/package.json
+++ b/ci/package.json
@@ -14,7 +14,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "guizhan-builds-2-data": "^0.6.0",
+    "guizhan-builds-2-types": "^0.6.0",
     "prettier": "3.2.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
